# kandy_kafka

./: Dockerfile  Makefile  README.md  docker-compose.kafka.yaml  docker-compose.yaml  kandy.py  pyproject.toml
.github/workflows/: codacy.yml
design/: Computer Science Project.excalidraw  architecture.md  product_quality_chart.md  sequnce_diagrams.md
design/diagrams/: Adapter.uml
design/layouts/: main.py  topics.py
kandy_kafka/: bootstrap.py  config.py  exceptions.py  logger.py  models.py
kandy_kafka/adapters/: kafka_adapter.py
kandy_kafka/controller/: controler.py
kandy_kafka/domain/: models.py
kandy_kafka/gui/: app.css  controller.py  gui.py  menus.py  panels.py  topic_view.py  views.py
kandy_kafka/model/: model.py
kandy_kafka/poller/: cache.py  poller.py
kandy_kafka/utils/: config_reader.py  hosts.py
kandy_kafka/view/: cli.py  view.py
report/: Sarah_interview.tex  main.aux  main.fdb_latexmk  main.fls  main.out  main.pyg  main.synctex(busy)  main.tex  main.toc
report/_minted-main/: 0F81E9C7DD12360BF7FB58FB0B9298FBFAF6C2EF0AF6B8BE7736BEC7CE09ACA3.pygtex  19268276D94FD8C48FB84ABEEE54C0123BE8E12346291E9D24029A6B880975F3.pygtex  1BC7FBBCBF4A9FD5D1CA0F41F26B5EEA05633F756ED24A59D4ECED5536ECFF74.pygtex  23747EF09317C1571503CAD35180CD0DDE3DC341B1917013C272B3E8868BEC1C.pygtex  25280767B6CB21F54924D34B775FB7733BE8E12346291E9D24029A6B880975F3.pygtex  27CECAC44EB18F79377512BAEA308E471E81C887CFF9A73230933959DA797F60.pygtex  2BF09E30F3327840DF039F5B02BDC1CB3BE8E12346291E9D24029A6B880975F3.pygtex  (+62 more)
tests/: conftest.py  kafka_setup.bak.sh  kafka_setup.sh
(+12 files in other folders)
